<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.holamudo.datos.MenuActivity">

    <TextView
        android:id="@+id/text1"
        android:layout_width="250dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/text1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnNotificacion"
        android:layout_width="282dp"
        android:layout_height="73dp"
        android:layout_marginStart="184dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="184dp"
        android:text="@string/btnNotificacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text1" />

    <Button
        android:id="@+id/btnListado"
        android:layout_width="289dp"
        android:layout_height="70dp"
        android:layout_marginStart="184dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="184dp"
        android:text="@string/btnListado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNotificacion" />

    <Button
        android:id="@+id/btnListadoNotas"
        android:layout_width="277dp"
        android:layout_height="67dp"
        android:layout_marginStart="184dp"
        android:layout_marginEnd="184dp"
        android:text="@string/btnListadoNotas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnListado" />

    <Button
        android:id="@+id/btnCalculadora"
        android:layout_width="279dp"
        android:layout_height="50dp"
        android:layout_marginStart="184dp"
        android:layout_marginEnd="184dp"
        android:text="@string/btnCalculadora"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnListadoNotas" />

    <Button
        android:id="@+id/btnWEB"
        android:layout_width="283dp"
        android:layout_height="71dp"
        android:layout_marginStart="184dp"
        android:layout_marginEnd="184dp"
        android:text="@string/btnWEB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalculadora" />

</android.support.constraint.ConstraintLayout>